z-index fixes for userbar, menu, taglines etc

--- a/client/modules/Layout/components/Header/Header.css
+++ b/client/modules/Layout/components/Header/Header.css
@@ -4,6 +4,7 @@
   height:70px;
   padding-top: 10px;
   border-bottom:3px solid white;
+  z-index: 10;
 }
 
 .content {
@@ -88,7 +89,7 @@
   height: 100%;
   top: 70px;
   list-style: none;
-  z-index: 10000;
+  z-index: 10;
 }
 
 .ul li{
