--- a/client/modules/Layout/components/UserBar/UserBar.css
+++ b/client/modules/Layout/components/UserBar/UserBar.css
@@ -5,7 +5,7 @@
 	width: 100%;
 	min-height: 3em;
 	text-align: center;
-	z-index: 9998;
+	z-index: 5;
 	padding-top: 0.5em;
 }
 
